Building Controller that implements API
ReceiptController now implements the ReceiptAPI generated in the
grocery-api repo. Still needs to be properly implemented. Also need to
investigate why mvn fails to compile the source code when I use
getFirst() on arrays